// proto/blog/post.proto
syntax = "proto3";
package shravanshetty1.samachar.samachar;

option go_package = "github.com/shravanshetty1/samachar/x/samachar/types";

import "gogoproto/gogo.proto";

message Post {
  string creator = 1;
  string id = 2;
  string content = 3;
  string parent_post = 4;
  int64 block_no = 5;
  // can implement custom features here such as retweet .etc.
  string metadata = 6;
}

message GenesisState {

}

message AccountInfo {
  string address = 1;
  string bio = 2;
  string photo = 3;
}

message MsgCreatePost {
  string creator = 1;
  string content = 2;
  string parent_post = 3;
  string metadata = 4;
}

message MsgUpdateAccountInfo{
  string creator = 1;
  string bio = 2;
  string photo = 3;
  string metadata = 4;
}

